--- a/styles/notion.css
+++ b/styles/notion.css
@@ -36,3 +36,22 @@
 .notion-collection-card-cover {
 	border-bottom: none;
 }
+
+/* 页面元数据信息 */
+.notion-collection-row {
+	border-bottom: none;
+	
+}
+.notion-collection-page-properties .notion-collection-column-title {
+  display: none;
+}
+.notion-collection-row-property .notion-property {
+  display: flex;
+  justify-content: center;
+}
+.notion-collection-row-value {
+  display: flex;
+  align-items: center;
+  padding: 0;
+  min-height: 23px;
+}
