--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -54,7 +54,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  background: #18181b;
+  /* background: #18181b; */
   font-family: Inter, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
     Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
