--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,17 +3,18 @@
 @tailwind utilities;
 
 :root {
+  /* Your default theme */
+  --background: white;
+  --foreground: black;
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+[data-theme='dark'] {
+  --background: black;
+  --foreground: white;
+  --foreground-rgb: 255, 255, 255;
 }
 
 body {
