--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  /* Your default theme */
+/* :root {
   --background: white;
   --foreground: black;
   --foreground-rgb: 0, 0, 0;
@@ -19,4 +18,4 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-}
+} */
